--- a/README.html
+++ b/README.html
@@ -373,9 +373,10 @@ which zone may be the best to pursue aquaculture of that species.</p>
 <div id="dependencies" class="section level3">
 <h3>Dependencies</h3>
 <p>Ensure you have the following prerequisites installed:</p>
-<p>R (version 4.0 or later) R packages: terra, sf, tidyverse, tmap,
-testthat, kableExtra Quarto for rendering reports Operating System:
-macOS, Linux, or Windows 10+</p>
+<p>R (version 4.0 or later)</p>
+<p>R packages: terra, sf, tidyverse, tmap, testthat, kableExtra</p>
+<p>Quarto for rendering reports</p>
+<p>Operating System: macOS, Linux, or Windows 10+</p>
 </div>
 <div id="installing" class="section level3">
 <h3>Installing</h3>
@@ -399,7 +400,8 @@ macOS, Linux, or Windows 10+</p>
 </div>
 <div id="authors" class="section level2">
 <h2>Authors</h2>
-<p>Eric Fairbanks <a href="mailto:efairbanks@ucsb.edu" class="email">efairbanks@ucsb.edu</a></p>
+<p>Eric Fairbanks</p>
+<p><a href="mailto:efairbanks@ucsb.edu" class="email">efairbanks@ucsb.edu</a></p>
 </div>
 <div id="acknowledgments" class="section level2">
 <h2>Acknowledgments</h2>
